--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,7 @@ color:#333;
     font-weight: bold;
     font-size: 1.3rem;
     text-decoration: none;
+    margin-right:20px;
 }
 
 .main-container a:hover{
